--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PORT=5000
 MONGO_URI=mongodb+srv://ganesh:ganesh123@cluster0.klx7gk5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=3YOPF7IAQiMUv0jHPX9fd724GoeQaCso
 CLOUD_NAME=dmpm1mfrm
